...

  return (
    <KeyboardAvoidingView className="h-full w-full" behavior="height">
      <ScrollView className="h-full w-full bg-white">
        <View className="h-full w-full mt-10 bg-white">
          <View className="flex-col justify-center align-middle mt-10 mb-5 ml-5 mr-5">
            <Text className="text-center text-4xl text-[#0E3D60] font-montserrat-extra-bold pb-2">Votre profil</Text>
            <Text className="text-center text-[#0E3D60] font-montserrat">
              Mettez à jour vos informations pour une expérience encore plus personnalisée.
            </Text>
          </View>
          <View className="flex-col justify-center items-center m-5">
            <EntryFieldDefaultValue
              icon={faUser}
              title="Prénom"
...
