...
                fontSize: 40,
                color: '#0E3D60',
                textAlign: 'center',
                marginBottom: 6,
              }}
            >
              Créer une annonce
            </Text>
            <Text style={{ fontFamily: 'Montserrat', fontSize: 16, color: '#0E3D60', textAlign: 'center' }}>
              Choisissez le type d&apos;annonce que vous souhaitez créer
            </Text>
          </View>

...
              onPress={() => {}}
            />
          </View>
        </View>
      )}
      <Modal isOpen={modalOpen}>
        <View className="bg-white w-full p-5 rounded-xl items-center shadow-md shadow-black/20">
          <Text className="text-[#0E3D60] text-[23px] text-center font-bold mb-2 w-full">{displayOfferType(type)}</Text>
          <View className="flex justify-center w-full mt-2">
            <View>
              <OfferForm type={type} onSubmit={handleFormSubmit} />
            </View>
            <View>
...
