...
            </View>
          ))}

          <TouchableOpacity
            style={styles.button}
            onPress={() => setShowAllAnnonces(!showAllAnnonces)}
            testID="announceShow"
          >
            <Text style={styles.buttonText}>{showAllAnnonces ? 'Voir moins' : 'Voir plus'}</Text>
          </TouchableOpacity>
        </View>

        <View style={styles.section}>
...
